Fix collapsed navbar

--- a/app/assets/stylesheets/all/navbar.css.scss
+++ b/app/assets/stylesheets/all/navbar.css.scss
@@ -18,26 +18,16 @@
   background-color: #F25F70;
   color: white;
   border: 0 !important;
-  margin-bottom: 0px;
-  height: 60px;
-}
-
-.navbar-collapse.collapse {
-  height: 60px;
 }
 
 .nav.navbar-nav.navbar-right {
   color: white;
-  display: block;
-  height: 60px;
-  padding-top: 5px;
   font-size: 1.4rem;
   font-weight: bold;
   line-height: 1;
   text-decoration: none;
   text-transform: uppercase;
   text-align: center;
-  margin-right: 13%;
   transition: all 0.2s ease 0s;
   &:hover {
     color: black;
@@ -47,8 +37,6 @@
 
 .navbar-inverse .navbar-nav > li > a {
   color: white;
-  margin-right: 5%;
-  margin-left: 5%;
   &:hover {
     color: #333;
     text-decoration: none;
@@ -56,7 +44,5 @@
 }
 
 .navbar-btn {
-  margin-bottom: 10px;
-  margin-top: 10px;
   font-size: 130%;
 }
